# NumbaQuadpack

./: CMakeLists.txt  README.md  setup.py
NumbaQuadpack/: driver.py
include/: cquadpack.h
src/: dqag.c  dqage.c  dqagi.c  dqagp.c  dqags.c  dqawc.c  dqawce.c  dqawf.c  dqawfe.c  dqawo.c  dqaws.c  dqawse.c  dqc25c.c  dqc25o.c  dqc25s.c  dqcheb.c  dqext.c  dqfour.c  dqk15.c  dqk15i.c  dqk15w.c  dqk21.c  dqk31.c  dqk41.c  dqk51.c  dqk61.c  dqmomo.c  dqng.c  dqsort.c  dqwgt.c  logdiff.c  logsum.c
